# neural-graphics-sdk-for-game-engines

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  BinariesDisclaimer.txt  CMakeLists.txt  Doxyfile  LICENSE  README.md  RELEASE-NOTES.md  aarch64_toolchain.cmake  build.bat  build.sh
docs/NSS/: NSS.md
ffx-api/: CMakeLists.txt
ffx-api/include/ffx_api/: ffx_api.h  ffx_api.hpp  ffx_api_loader.h  ffx_api_types.h  ffx_nss.h  ffx_nss.hpp  ffx_upscale.h  ffx_upscale.hpp
ffx-api/include/ffx_api/vk/: ffx_api_vk.h  ffx_api_vk.hpp
ffx-api/src/: backends.cpp  backends.h  ffx_api.cpp  ffx_provider.cpp  ffx_provider.h  ffx_provider_external.h  ffx_provider_nss.cpp  ffx_provider_nss.h  validation.cpp  validation.h
ffx-api/src/resource/: resource.h
prebuilt_binaries/: ngsdk_windows_x64.lib
sdk/: CMakeLists.txt  toolchain.cmake
sdk/include/FidelityFX/: arm_helpers.h
sdk/include/FidelityFX/gpu/: CMakeCompileShaders.txt  ffx_common_types.h  ffx_core_cpu.h  ffx_core_glsl.h  ffx_core_gpu_common.h  ffx_core_gpu_common_half.h  ffx_core_hlsl.h  ffx_core_portability.h
sdk/include/FidelityFX/gpu/nss/: CMakeCompileNSSShaders.txt  common.h  ffx_nss_callbacks_glsl.h  ffx_nss_common_glsl.h  ffx_nss_debug_view.h  ffx_nss_mirror_padding.h  ffx_nss_postprocess.h  ffx_nss_preprocess.h  ffx_nss_resources.h
sdk/include/FidelityFX/host/: ffx_assert.h  ffx_error.h  ffx_interface.h  ffx_nss.h  ffx_types.h  ffx_util.h
sdk/include/FidelityFX/host/backends/vk/: ffx_hash.h  ffx_vk.h
sdk/include/spirv-tools/: LICENSE  libspirv.h  spirv.hpp11
sdk/include/vulkan-headers/vulkan/: vulkan.hpp  vulkan_core.h  vulkan_enums.hpp  vulkan_extension_inspection.hpp  vulkan_format_traits.hpp  vulkan_funcs.hpp  vulkan_handles.hpp  vulkan_hash.hpp  vulkan_raii.hpp  vulkan_shared.hpp  vulkan_static_assertions.hpp  vulkan_to_string.hpp
sdk/libs/: SPIRV-Tools-opt.lib  SPIRV-Tools.lib
sdk/libs/Debug/: SPIRV-Tools-opt.lib  SPIRV-Tools.lib
sdk/src/backends/shared/: ffx_shader_blobs.cpp  ffx_shader_blobs.h
sdk/src/backends/shared/blob_accessors/: ffx_nss_shaderblobs.cpp  ffx_nss_shaderblobs.h
sdk/src/backends/vk/: CMakeLists.txt  CMakeShadersNSS.txt  ffx_hash.cpp  ffx_vk.cpp
sdk/src/backends/vk/data_graphs/nss/: nss_v0_1_1_int8.vgf
sdk/src/backends/vk/shaders/nss/: ffx_nss_debug_view.glsl  ffx_nss_mirror_padding.glsl  ffx_nss_post_process.glsl  ffx_nss_pre_process.glsl
sdk/src/components/nss/: CMakeLists.txt  ffx_nss.cpp  ffx_nss_private.h
sdk/src/shared/: ffx_assert.cpp  ffx_object_management.cpp  ffx_object_management.h
sdk/tools/binary_store/: FidelityFX_SC  LICENSE  Model_Parser
sdk/tools/ffx_model_parser/: CMakeLists.txt  GenerateSolution.bat  build.bat  build.sh
sdk/tools/ffx_model_parser/libs/vgf/: decoder.h  vgf.lib
sdk/tools/ffx_model_parser/src/: ffx_model_parser.cpp  types.hpp
sdk/tools/ffx_shader_compiler/: CMakeLists.txt  GenerateSolution.bat  build.bat  build.sh
sdk/tools/ffx_shader_compiler/libs/glslangValidator/: CMakeLists.txt
sdk/tools/ffx_shader_compiler/src/: compiler.h  ffx_sc.cpp  glsl_compiler.cpp  glsl_compiler.h  pch.cpp  pch.hpp  utils.cpp  utils.h
